@@ -1,3 +1,12 @@
+2006-11-05  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	Replace ':' chars in search strings with ' '
+	Stops from crashing (bug #364768)
+	Don't chew memory when search string contains
+	2 consecutive spaces
+	
+
 2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-info-parser.c:
